--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,25 @@ margin-top: 45px;
 .btnStartQuizz:active{
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
+
+.loading-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px; /* Adjust the height as needed */
+}
+
+.spinner {
+  border: 4px solid rgb(87, 53, 208);;
+  border-left-color: #381786; /* Adjust the color as needed */
+  border-radius: 50%;
+  width: 40px; /* Adjust the size as needed */
+  height: 40px; /* Adjust the size as needed */
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
